[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-ibl"
version = "0.3.0"
authors = [
    { name="Cody Baker", email="cody.baker@catalystneuro.com" },
    { name="Heberto Mayorquin", email="h.mayorquin@gmail.com" },
]
description = "IBL sessions specific metadata"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=2.8.0",
    "hdmf>=3.14.1",
]

[project.urls]
"Homepage" = "https://github.com/catalystneuro/ndx-ibl"
"Bug Tracker" = "https://github.com/catalystneuro/ndx-ibl/issues"

[tool.hatch.build]
include = [
    "src/pynwb",
    "spec/ndx-ibl.extensions.yaml",
    "spec/ndx-ibl.namespace.yaml",
]
exclude = [
    "src/pynwb/tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_ibl",
    "spec"
]

[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_ibl/spec"

[tool.hatch.build.targets.sdist]
include = [
    "src/pynwb",
    "spec/ndx-ibl.extensions.yaml",
    "spec/ndx-ibl.namespace.yaml",
    "docs",
]
exclude = []

[dependency-groups]
min = [
    "pynwb==2.8.0",
    "hdmf==3.14.1",
]

dev = [
    "black>=24.4.2",
    "codespell>=2.3.0",
    "coverage>=7.5.4",
    "hdmf-docutils>=0.4.7",
    "pre-commit>=3.5.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-subtests>=0.12.1",
    "python-dateutil>=2.8.2",
    "ruff>=0.4.10",
]

[tool.pytest.ini_options]
# uncomment below to run pytest always with code coverage reporting. NOTE: breakpoints may not work
# addopts = "--cov --cov-report html"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,./docs/_build/*,*.ipynb"

[tool.coverage.run]
branch = true
source = ["ndx_ibl"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb|docs/"

[tool.ruff]
lint.select = ["E", "F", "T100", "T201", "T203"]
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "build/",
    "dist/",
    "docs/source/conf.py",
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"src/pynwb/ndx_ibl/__init__.py" = ["E402", "F401"]
"src/spec/create_extension_spec.py" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 17
